# android-so-injector

./: .gitignore  CMakeLists.txt  README.md  REFERENCES.md  build.sh
src/: elf_utils.cpp  example_lib.cpp  injector.cpp  main.cpp  process_utils.cpp  ptrace_utils.cpp
src/include/: elf_utils.h  injector.h  process_utils.h  ptrace_utils.h
